making state class

--- a/Basic_chatbot/basicchatbot.ipynb
+++ b/Basic_chatbot/basicchatbot.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fbfd26ee",
    "metadata": {},
    "outputs": [],
@@ -25,11 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d1cfb859",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class State(TypedDict): # state class will return a TypedDict which is a dictionary with specific keys and value types\n",
+    "    # Messages have the type \"list\". The `add_messages` function in the annotation defines how this state key should be updated\n",
+    "    # (in this case, it appends messages to the list, rather than overwriting them)\n",
+    "    messages:Annotated[list,add_messages] # messages is a list that will be updated with new messages that are send by the user or the bot  \n",
+    "    # Annotated is used to specify that the messages key will be updated by the add_messages function\n",
+    "    # The add_messages function is a utility that appends new messages to the existing list of messages instead of replacing it"
+   ]
   },
   {
    "cell_type": "code",
@@ -49,8 +56,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
